2005-07-25  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml: add video/3gpp with associated magic
	(from: http://www.faqs.org/rfcs/rfc3839.html)

2005-07-24  Thomas Leonard  <tal@ecs.soton.ac.uk>

	* freedesktop.org.xml: sync
	* freedesktop.org.xml.in: made application/x-awk and x-shellscript
	both subclass application/x-executable

2005-07-13  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml: sync
	* freedesktop.org.xml.in: add magic data to recognise asf reference
	files (with the same mime-type as asf video files, go MS)

2005-05-30  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: add the "application/x-shorten" mime-type
	to represent Shorten lossless audio files

2005-04-17  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: change audio/x-m4a mime-type to audio/mp4,
	add audio/x-m4a as an alias, add video/mp4 detection
	(from: http://www.ietf.org/internet-drafts/draft-lim-mpeg4-mime-03.txt)

2005-04-16  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: add application/x-gedcom as a mime-type
	for GEDCOM family history files

2005-04-16  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml:
	* freedesktop.org.xml.in: improved mathematica magic, fixes #2660

2005-04-16  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml.in: added magic for mathematica notebooks
	* freedesktop.org.xml:
	* po/Makefile.in.in: updated autogenerated files

2005-04-16  Christophe Fergeau  <teuf@gnome.org>

	* .cvsignore:
	* freedesktop.org.xml.in: use application/xslt+xml for xslt
	stylesheets, maybe it will need to be changed to text/xml or
	application/xml, I'm unsure about what's best, this is bug #2928

2005-04-16  Christophe Fergeau  <teuf@gnome.org>

	* .cvsignore: minor update, fixes #2091, patch by Loic Minier

2005-04-16  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml.in: added magic pattern and glob pattern for
	ruby files, patch by Ilmari Heikkinen, fixes #2154
