@@ -1,3 +1,9 @@
+2005-08-09  Bastien Nocera  <hadess@hadess.net>
+
+	* freedesktop.org.xml.in: Make the application/mathematica comment
+	translatable, patch from Christopher James Lahey <clahey@novell.com>
+	and Luis Villa <luis.villa@gmail.com> for docbook support
+
 2005-07-25  Bastien Nocera  <hadess@hadess.net>
 
 	* freedesktop.org.xml: add video/3gpp with associated magic
